examples/ill-formed/primitives/InvalidType.primitive
Primitive InvalidType(Bool x) {
    Int y = x;
}
